# RIPthm-V2

./: .cache  .env.example  .gitignore  LICENSE  README.md  RIPthm.service.example  main.py  pyproject.toml  requirements.txt  start.sh
cogs/: cog_admin.py  cog_monitor.py  cog_music.py  cog_test.py  music.py
utils/: generic.py  persistent_deletes.py  profanity.py  topgg_api.py
