[tool.poetry]
name = "repl_nix_RIPthm-V2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
spotipy = "^2.21.0"
yt-dlp = "^2022.11.11"
colorthief = "^0.2.1"
lavalink = "^4.0.4"
py-cord = "^2.2.2"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
